# pipeline_delta_s3

./: .gitignore  .sqlfluff  README.md  pyproject.toml
.github/workflows/: ci.yml
airflow/: .gitignore  Dockerfile  docker-compose.override.yml  requirements.txt
airflow/.astro/: config.yaml  test_dag_integrity_default.py
airflow/dags/: pipeline_delta_s3.py
airflow/data/: transacoes.json
airflow/include/dbt_gold/: .user.yml  dbt_project.yml  profiles.yml
airflow/include/dbt_gold/models/: _source.yml  gold_cartao_com_mais_limite.sql  gold_cidades_por_tipo_transacao.sql  gold_transacoes_semana.sql
airflow/include/recipes/: dbt_recipe.yml  s3_recipe.yml
airflow/include/s3/: ingestion_s3.py
airflow/include/spark/bronze/: bronze_cartoes.py  bronze_clientes.py  bronze_contas.py  bronze_transacoes.py
airflow/include/spark/clients/: spark_builder.py
airflow/include/spark/schemas/: schema_clientes.py
airflow/include/spark/silver/: dim_cartao.py  dim_cliente.py  dim_conta.py  dim_data.py  ft_transacao.py
airflow/scripts/: generate_files.py
airflow/tests/gx/: great_expectations.yml
airflow/tests/gx/checkpoints/: pipeline_checkpoint.py
airflow/tests/gx/expectations/: .ge_store_backend_id  dim_cartao_suite.py  dim_cliente_suite.py  dim_conta_suite.py  ft_transacao_suite.py
data/: cartoes.csv  clientes.csv  contas.parquet
datahub/: docker-compose-datahub.yml
