[project]
name = "pipeline-delta-s3"
version = "0.1.0"
description = ""
authors = [
    {name = "Mairon Costa",email = "duartemairon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3 (>=1.42.68,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "pyspark (==4.1.1)",
    "dbt-duckdb (>=1.10.1,<2.0.0)",
    "great-expectations (==0.18.21)",
    "acryl-datahub[dbt-core] (>=1.4.0.7,<2.0.0.0)",
    "delta-spark (>=4.1.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyarrow (>=23.0.1,<24.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "sqlfluff (>=4.0.4,<5.0.0)",
    "sqlfluff-templater-dbt (>=4.0.4,<5.0.0)"
]

[tool.ruff]
target-version = "py313"
line-length = 88
 
[tool.ruff.lint]
select = [
    "F",
    "I", 
]
ignore = []
 
exclude = [
    ".venv",
    ".venv-datahub",
    "__pycache__",
    ".git",
    "dist",
    "build",
    "airflow/include/dbt_gold",
]
 
[tool.ruff.lint.isort]
known-first-party = ["etl"]
known-third-party = [
    "airflow",
    "pyspark",
    "pendulum",
]
force-sort-within-sections = true
lines-after-imports = 2
 
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"